feat: refactor employee initialization and add CPF validation utility method